--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,1 +1,15 @@
-<p>alunos works!</p>
+<h2>Alunos Cadastrados:</h2>
+<table>
+
+  <tr>
+    <th>#id</th>
+    <th>Nome</th>
+    <th>Idade</th>
+  </tr>
+
+  <tr>
+    <td>1</td>
+    <td>Falvio</td>
+    <td>24</td>
+  </tr>
+</table>
